--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "email": "neil.sweeney@dootrix.com",
     "url": "https://wolfiezero.com"
   },
+  "np": {
+    "tests": false
+  },
   "license": "ISC",
   "peerDependencies": {
     "prettier": "^2.2.1"
