Apply node engine version

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "description": "Sharable config for Prettier",
   "homepage": "https://github.com/Dootrix/prettier-config/blob/main/README.md",
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "bugs": {
     "url": "https://github.com/Dootrix/prettier-config/issues"
   },
